[package]
name = "bitcoin-puzzle-tx"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.30.0"
num-bigint = { version = "0.4.3", features = ["rand", "quickcheck", "std"] }
num-traits = "0.2.15"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = { version = "1.0.96" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"